src/components/organisms/cardSlider/index.module.scss
@import '../../../styles/common';

.base {
	--arrow-size: 24px;
	--arrow-margin: 8px;
	--slide-padding: #{$grid-gap};
	--arrow-padding: 16px;
	--slider-full-width: calc(100% + var(--slide-padding) * 2);
	--slide-shift: calc(-1 * var(--slide-padding));
	--arrow-full-width: calc(var(--arrow-size) + var(--arrow-padding) * 2);

	@media (min-width: $breakpoint-lg) {
		--arrow-padding: 6px;
		--arrow-margin-visual: 16px;
		--max-outset: min(
			var(--content-padding-left),
			var(--content-padding-right)
		);
		--arrow-margin: calc(var(--arrow-margin-visual) - var(--slide-padding));
		--arrow-full-width: calc(
			var(--arrow-size) + var(--arrow-margin) + var(--arrow-padding) * 2
		);
		--arrow-outset: min(
			var(--max-outset) - var(--arrow-full-width),
			var(--arrow-full-width)
		);
	}

	display: flex;
	width: var(--slider-full-width);
	position: relative;
	left: var(--slide-shift);
}
.base_newpadding {
	--slide-padding: 10px;
	--arrow-margin: 16px;
}
.arrow {
	cursor: pointer;
	border: none;
	position: absolute;
	background: $ts-white;
	top: calc(50% - var(--arrow-full-width) / 2);
	padding: var(--arrow-padding);
	box-shadow: $ts-shadow-small-default;
	z-index: 100;
	border-radius: 100%;
	opacity: 0;
	transition: opacity $transition-quick, box-shadow $transition-quick;

	&:hover {
		box-shadow: $ts-shadow-small-hover;
	}

	&:disabled {
		cursor: default;
	}

	&:first-child {
		left: var(--arrow-margin);
	}

	&:last-child {
		right: var(--arrow-margin);
	}

	@media (min-width: $breakpoint-lg) {
		position: initial;
		background: transparent;
		opacity: 1;
		box-shadow: none;
		border-radius: 0;
		transition: none;

		&:hover {
			box-shadow: none;
		}

		&:first-child {
			margin-right: calc(var(--arrow-margin) + env(safe-area-inset-right));
		}

		&:last-child {
			margin-left: calc(var(--arrow-margin) + env(safe-area-inset-left));
		}
	}
}
.arrowSalmon {
	cursor: pointer;
	border: none;
	position: absolute;
	background: $ts-salmon;
	top: calc(50% - var(--arrow-full-width) / 2);
	padding: var(--arrow-padding);
	box-shadow: $ts-shadow-small-default;
	z-index: 100;
	border-radius: 100%;
	opacity: 0;
	transition: opacity $transition-quick, box-shadow $transition-quick;

	&:hover {
		box-shadow: $ts-shadow-small-hover;
	}

	&:disabled {
		cursor: default;
	}

	&:first-child {
		left: var(--arrow-margin);
	}

	&:last-child {
		right: var(--arrow-margin);
	}

	@media (min-width: $breakpoint-lg) {
		position: initial;
		background: transparent;
		opacity: 1;
		box-shadow: none;
		border-radius: 0;
		transition: none;

		&:hover {
			box-shadow: none;
		}

		&:first-child {
			margin-right: calc(var(--arrow-margin) + env(safe-area-inset-right));
		}

		&:last-child {
			margin-left: calc(var(--arrow-margin) + env(safe-area-inset-left));
		}
	}
}

.base:hover .arrow:not(:disabled) {
	opacity: 1;
}
.base:hover .arrowSalmon:not(:disabled) {
	opacity: 1;
}
.base swiper-container {
	flex-grow: 1;
}

.base swiper-slide {
	padding: $grid-gap $grid-gap 32px $grid-gap;
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(var(--min-card-width), 1fr));
	grid-gap: $grid-gap;
	height: 100%;
	width: 100%;
}

.base swiper-slide > * {
	width: 100%;
	max-width: 500px;
	margin-left: auto;
	margin-right: auto;
}
.whiteBg {
	background-color: $ts-white;
	border-radius: 16px;
	margin-top: 12px;
}
.whiteBg swiper-slide {
	padding: 2px;
	grid-gap: 12px;
}

